--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Run 3 Unblocked</title>
+	<title>Run 3</title>
 
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -13,9 +13,6 @@
 
 	<link rel="shortcut icon" type="image/png" href="./favicon.png">
 
-	<script>
-		window.location= "https://ubg98.github.io/Run3/";
-	</script>
 	<script type="text/javascript" src="./Run3beta.js"></script>
 
 	<script>
